change request email 03.01.23 Regula

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -97,7 +97,7 @@ de:
       tertiary:
         paragraph_1_html: |
           <p>Entsprechend dem Screening-Score dieser Familie wird nebst der Primärprävention (Mütter- und Väterberatung) auch eine Tertiärprävention empfohlen.</p>
-          <p>Die Belastungsfaktoren sind zahlreich und eine gesunde Entwicklung des/Ihres Kindes könnte gefährdet sein.</p>
+          <p>Die Belastungsfaktoren sind zahlreich und eine gesunde Entwicklung des Kindes könnte gefährdet sein.</p>
           <p>In diesen Fällen kann die Familienbegleitung PAT zusammen mit der Primärprävention und einem vorhandenen oder im familiären Umfeld geschaffenen Netzwerk zur Anwendung kommen.</p>
           <p>Wir empfehlen die Anmeldung zur Familienbegleitung PAT unter <a href="https://www.ovk.ch/familienbegleitung-pat/anmelden" target="_blank"><i class="fas fa-link"></i>https://www.ovk.ch/familienbegleitung-pat/anmelden</a> oder <a href="mailto:pat.ovk@hin.ch"><i class="fas fa-envelope"></i>pat.ovk@hin.ch</a>.</p>
           <p>Eine PAT-Elterntrainerin wird mit der Familie Kontakt aufnehmen und in zwei bis drei Gesprächen zusammen mit den Eltern und allenfalls der zuweisenden Stelle eine Bedarfseinschätzung vornehmen und abklären, ob die Familienbegleitung PAT zur Anwendung kommt.</p>
@@ -119,7 +119,7 @@ de:
       tertiary:
         paragraph_1_html: |
           <p>Entsprechend dem Screening-Score dieser Familie wird nebst der Primärprävention (%{link}) auch eine Tertiärprävention empfohlen.</p>
-          <p>Die Belastungsfaktoren sind zahlreich und eine gesunde Entwicklung des/Ihres Kindes könnte gefährdet sein.</p>
+          <p>Die Belastungsfaktoren sind zahlreich und eine gesunde Entwicklung des Kindes könnte gefährdet sein.</p>
           <p>In diesen Fällen kann die Familienbegleitung PAT zusammen mit der Primärprävention und einem vorhandenen oder im familiären Umfeld geschaffenen Netzwerk zur Anwendung kommen.</p>
           <p>Sie als Fachpersonen, die die Familie kennen, können das Projekt empfehlen und die Eltern um Erlaubnis bitten, von einer PAT-Elterntrainerin für eine Präsentation zu Hause kontaktiert zu werden.</p>
           <p>Wenn die Familie Interesse hat, werden einige Aufnahmebesuche stattfinden, damit die Familie verstehen kann, worum es geht. Gemeinsam wird entschieden, ob das PAT-Projekt integriert und/oder andere Dienste einbezogen werden.</p>
