new apg logo for pat ticino

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -3,6 +3,9 @@ de:
     description: PAT - Mit Eltern Lernen
     author: PAT - Parents as Teachers - Mit Eltern Lernen
   continue: Weiter
+  pat_address: PAT Imparo con i genitori Ticino
+  pat_address_additional_1: PAT-Trägerschaft
+  pat_address_additional_2: Gefördert durch Associazione Progetto Genitori
   home:
     title: PAT - Mit Eltern Lernen
     ovk:
